fix a pb with Chrome (MIME type of external js)

--- a/ElasticQuery.html
+++ b/ElasticQuery.html
@@ -4,31 +4,22 @@
 <title>ElasticQuery</title>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-<script src="//raw.github.com/nicolaskruchten/pivottable/master/examples/pivot.js"></script>
+<script src="//rawgithub.com/nicolaskruchten/pivottable/master/examples/pivot.js"></script>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css">
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-<link rel="stylesheet" href="//raw.github.com/nicolaskruchten/pivottable/master/examples/pivot.css">
+<link rel="stylesheet" href="//rawgithub.com/nicolaskruchten/pivottable/master/examples/pivot.css">
 <style>
 body{font-family:arial;font-size: 9pt;}
 #header{display:inline;height:3em;}
-#header input{
-	padding-left: 30px;
-	width: 20em;
-}
+#header input{padding-left: 30px;width: 20em;}
 #header table,#header table tr td{padding:0em;margin:0em;max-height:3em;vertical-align:top;}
-
-#header .navbar-brand {
-    padding-top: 0.2em;
-}
-
+#header .navbar-brand {padding-top: 0.2em;}
 #header label {
     padding-top: 0.2em;
     font-size: 1em;
     font-weight:normal;
     margin-left:2em;
 }
-
-
 #header i {
     position: absolute;
     margin-left : 8px;
