--- a/ElasticQuery.html
+++ b/ElasticQuery.html
@@ -240,8 +240,7 @@ function connect_server(){
 //Refresh DB Query
 function refresh_query(){
 	selected_es_fields = [];
-	var worksheethtml = '';
-	var csvcontent = '';
+
 	$('#view_fields li').each(function(i){
 		selected_es_fields[$( this ).text()] = 'ok';
 	});
@@ -288,21 +287,18 @@ function refresh_query(){
 							$('#csv').append(field+';');
 						}
 					});
-					$('#worksheet').append(header+'</tr></thead>');
+					$('#worksheet').append(header+'</tr></thead><tbody id="worksheetbody"></tbody>');
 				}
-				worksheethtml= '<tr id="_id'+data_response[i]._id+'">';				
-				csvcontent = '\n';
+				var worksheet = document.getElementById("worksheetbody");
+				var line = worksheet.insertRow(-1);
 				$.each(data_response[i]._source, function(field,value) {
 					if(selected_es_fields[field] != undefined){
 						if (field.indexOf("date") !=-1){
 							value = $.datepicker.formatDate(date_format, new Date(value));
 						}
-						worksheethtml = worksheethtml.concat('<td>'+value+'</td>');						
-						csvcontent = csvcontent.concat(value+';');						
+						line.insertCell().innerHTML = value;
 					}
 				});
-				$('#worksheet').append(worksheethtml.concat('</tr>'));
-				$('#csv').append(csvcontent);
 		            }
 			    $('#worksheet_count').append(data_response.length + ' lines in result');
 			    $('#info').append('<table class="table condensed-table"><tr><td>Response time of last query</td><td>'+response.took+'ms</td></tr><tr><td>Result lines of last query</td><td>'+data_response.length+'</td></table>');
@@ -348,6 +344,7 @@ function refresh_query(){
 	<option>100</option>
 	<option>1000</option>
 	<option>10000</option>
+	<option>100000</option>
 	</select>
 </td></tr></table>
 </div>
